--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <h3>Top Series</h3>
 <div class = "grid grid-pad">
-  <a *ngFor="let series of topSeries" routerLink="/detail/{{series.id}}" class="col-1-4">
+  <a *ngFor="let series of topSeries" routerLink="/detail/{{series.id}}" let i=index; let odd=odd; [class.odd]="odd" class="col-1-4">
     <div class="module series">
       <h4>{{series.name}}</h4>
     </div>
