--- a/src/app/series-search/series-search.component.html
+++ b/src/app/series-search/series-search.component.html
@@ -1,5 +1,5 @@
 <div id="search-component">
-  <h4>Series Search</h4>
+  <h4><span [appHighlight] defaultColor="#607d8b">Series Search</span></h4>
 
   <input #searchBox id="search-box" (input)="search(searchBox.value)">
 
